# Mean-Reversion-HFT

./: .env.example  .gitignore  README.md  backtest.py  broker.py  config.py  data.py  live.py  mean_reversion_strategy_guide.md  monitor.py  pyproject.toml  report.py  strategy.py
.claude/: settings.local.json
.github/workflows/: backtest.yml  live.yml  monitor-close.yml  monitor-open.yml  report.yml
logs/: trade_log.json
report/: trades_2026-05-01.csv  trades_2026-05-02.csv  trades_2026-05-04.csv  trades_2026-05-05.csv  trades_2026-05-07.csv  trades_2026-05-09.csv  trades_2026-05-11.csv  trades_2026-05-12.csv  trades_2026-05-13.csv  trades_2026-05-14.csv  trades_2026-05-19.csv  trades_2026-06-02.csv  trades_2026-06-21.csv
scripts/: install_task.ps1
tests/: conftest.py  test_broker_decision.py  test_live_integration.py  test_strategy.py  test_week_simulation.py
